--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "@fontsource/poppins": "^5.0.14",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-scroll": "^1.9.0",
+    "react-use": "^17.5.0"
   },
   "devDependencies": {
     "postcss": "^8",
